--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,4 @@
-controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
-    type: attribute
+create_order:
+    path: /order
+    controller: App\Controller\Order\CreateOrderController::create
+    methods: POST
