Refactoring code and added tests

--- a/composer.json
+++ b/composer.json
@@ -67,5 +67,8 @@
             "allow-contrib": false,
             "require": "6.4.*"
         }
+    },
+    "require-dev": {
+        "phpspec/phpspec": "^7.5"
     }
 }
