--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,20 @@ version: '3.4'
 
 services:
     php:
-        build:
-            context: ./docker/php-fpm
-            dockerfile: Dockerfile
-        volumes:
-            - .:/var/www:delegated
-        working_dir: /var/www
-        command: php-fpm
-        environment:
-            - COMPOSER_MEMORY_LIMIT=-1
-        ports:
-            - "9000:9000"
+      build:
+        context: ./docker/php-fpm
+        dockerfile: Dockerfile
+        args:
+          USERID: "${USERID:-1000}"
+          GROUPID: "${GROUPID:-1000}"
+      volumes:
+        - .:/var/www:delegated
+      working_dir: /var/www
+      user: appuser  # Upewnij się, że tutaj jest poprawna nazwa użytkownika
+      environment:
+        - COMPOSER_MEMORY_LIMIT=-1
+      ports:
+        - "9000:9000"
 
     db:
         image: mariadb:latest
@@ -36,28 +39,6 @@ services:
         depends_on:
             - php
 
-###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-16}-alpine
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
-    healthcheck:
-      test: ["CMD", "pg_isready -U ${POSTGRES_USER:-app}"]
-      timeout: 5s
-      retries: 5
-      start_period: 60s
-    volumes:
-      - database_data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
-
 volumes:
     db_data: {}
 
-###> doctrine/doctrine-bundle ###
-  database_data:
-###< doctrine/doctrine-bundle ###
